--- a/musicbeats/templates/musicbeats/index.html
+++ b/musicbeats/templates/musicbeats/index.html
@@ -32,7 +32,7 @@
 
 
     <!-- ################################ CARDS ##################################################### -->
-<h2 class="mt-5 mb-3 " style="padding-left: 7%;">🔥 Trending Songs</h2>
+{% comment %} <h2 class="mt-5 mb-3 " style="padding-left: 7%;">🔥 Trending Songs</h2>
 
       <div class="container-fluid px-5">
         <div class="d-flex flex-row overflow-auto pb-3">
@@ -51,7 +51,27 @@
           </div>
           {% endfor %}
         </div>
-      </div> 
+      </div>  {% endcomment %}
+
+      <h2 class="mt-5 mb-3" style="padding-left: 7%;">🔥 Trending Songs</h2>
+
+<div class="container-fluid px-5">
+  <div class="d-flex flex-row overflow-auto pb-3" style="gap: 20px; scroll-snap-type: x mandatory;">
+    {% for i in song %}
+    <div class="card flex-shrink-0 shadow" style="width: 250px; border-radius: 15px; scroll-snap-align: start;">
+      <img src="/media/{{i.image}}" class="card-img-top"
+        style="height: 200px; object-fit: cover; border-top-left-radius: 15px; border-top-right-radius: 15px;">
+      <div class="card-body bg-light" style="border-bottom-left-radius: 15px; border-bottom-right-radius: 15px;">
+        <h5 class="card-title">{{ i.name }}</h5>
+        <p class="card-text">{{ i.tags }}</p>
+        <p class="card-text">Movie: {{ i.movie }}</p>
+        <a href="/musicbeats/songs/{{i.song_id}}" class="btn btn-outline-success w-100">🎧 Listen Song</a>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
   <hr>
       
       
