--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -9,84 +9,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="/media/images/soundmanagerv297a-20170601/script/soundmanager2.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" /> 
+
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
     {% load static %}
-
-    {% comment %} <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <i class="fa-solid fa-music fa-2xl" style="color: #63E6BE; margin-right:4px;"></i>   <a class="navbar-brand" href="/"style="color: #63E6BE;">Soundory</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Explore Music</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Podcasts</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Explore Premium</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Support</a>
-          </li>
-        </ul>
-      </div>
-      {% if user.is_authenticated %}
-                <ul class="navbar-nav ml-auto"></ul>
-                <li class="nav nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" style="color: white;" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Welcome <i class="fa-solid fa-circle-user fa-lg" style="color: #63E6BE;"></i> {{request.user}}</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="/musicbeats/c/{{request.user}}">Your Channel</a>
-                      <a class="dropdown-item" href="/musicbeats/upload">Upload Your Song</a>
-                      <a class="dropdown-item" href="/musicbeats/watchlater">Listen Later</a>
-                      <a class="dropdown-item" href="/musicbeats/history">History</a>
-                      <a class="dropdown-item" onclick="logout()">Logout</a>
-                    </div>
-                  </li>
-                </ul>
-                <script>
-                    function logout(){
-                        Swal.fire({
-                            title: 'Are you sure you want to Log out?',
-                            icon: 'warning',
-                            showCancelButton: true,
-                            confirmButtonColor: '#3085d6',
-                            cancelButtonColor: '#d33',
-                            confirmButtonText: 'Yes!'
-                            }).then((result) => {
-                            if (result.value) {
-                                document.location = "/musicbeats/logout_user"
-                            }
-                        })
-                    }
-                </script>
-
-        {% else %}
-        
-
-        <div class="d-flex justify-content-end align-items-center">
-          <a href="/musicbeats/login">
-            <button class="btn btn-outline-danger btn-sm px-4 rounded-pill" style="margin-right:4px;">
-              Login
-            </button>
-          </a>
-          <a href="/musicbeats/signup">
-            <button class="btn btn-danger btn-sm px-4 rounded-pill">
-              Signup
-            </button>
-          </a>
-        </div>  
-        {% endif %}
-    </nav> {% endcomment %}
-   
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
       <a class="navbar-brand d-flex align-items-center" href="/" style="color: #63E6BE;">
         <i class="fa-solid fa-music fa-lg mr-2" style="color: #63E6BE;"></i> Soundory
@@ -108,13 +36,13 @@
             <a class="nav-link" href="/musicbeats/songs/">Explore Music</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Podcasts</a>
+            <a class="nav-link" href="/musicbeats/podcast/">Podcasts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Explore Premium</a>
+            <a class="nav-link" href="/musicbeats/premium/">Explore Premium</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/songs/">Support</a>
+            <a class="nav-link" href="/musicbeats/support/">Support</a>
           </li>
         </ul>
     
@@ -167,12 +95,30 @@
     
     {% endblock %}
 
-    <!-- Footer -->
-<footer class="footer text-center" style="background-color: #343a40; color: #fff; padding: 20px 0; margin-top:23px">
-  <div class="container">
-      <p style="margin-bottom: 0;">Copyright &copy; 2025. All rights reserved.</p>
-      <p style="margin-bottom: 0;">Designed by <span style=" opacity: 0.7; text-transform: uppercase; letter-spacing: 1px; font-weight: 400; margin: 0px 5px;
-    font-family: 'Dancing Script', cursive; color:yellow;" > Vidhyanand, Vishnu, Tharun, Teja.</span></p>
+
+<footer style="background: linear-gradient(135deg, #1c1c1c, #343a40); color: #fff; padding: 40px 0; margin-top: 60px;">
+  <div class="container text-center">
+    <h4 style="font-family: 'Dancing Script', cursive; font-size: 28px; color: #ffdd57;">
+      Thank you for visiting Soundory 🎧
+    </h4>
+
+    <p class="mt-3 mb-1">Designed by 
+      <span style=" opacity: 0.7; text-transform: uppercase; letter-spacing: 1px; font-weight: 400; margin: 0px 5px;
+    font-family: 'Dancing Script', cursive; color:yellow;" >
+        Vidhyanand, Vishnu, Tharun, Teja
+      </span>
+    </p>
+
+    <div class="my-3">
+      <a href="#" class="text-light mx-2 fs-5"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="text-light mx-2 fs-5"><i class="fab fa-twitter"></i></a>
+      <a href="#" class="text-light mx-2 fs-5"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="text-light mx-2 fs-5"><i class="fab fa-github"></i></a>
+    </div>
+
+    <p class="mb-0" style="font-size: 14px; opacity: 0.8;">
+      &copy; 2025 Soundory. All rights reserved.
+    </p>
   </div>
 </footer>
 
