--- a/musicbeats/templates/musicbeats/login.html
+++ b/musicbeats/templates/musicbeats/login.html
@@ -1,35 +1,30 @@
 {% extends 'musicbeats/basic.html' %} {% block title %}Login{% endblock %} 
 {% block body %}
-<div class="container my-4 bg-light" style="width: 500px; padding-bottom: 23px">
-  <form action="/musicbeats/login/" method="POST">
-    {% csrf_token %}
-    <div class="form-group p-2">
-      <label for="exampleInputEmail1">Username</label>
-      <input
-        type="text"
-        class="form-control"
-        id="exampleInputEmail1"
-        aria-describedby="emailHelp"
-        placeholder="Enter Username"
-        name="username"
-      />
-    </div>
-    <div class="form-group p-2">
-      <label for="exampleInputPassword1">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="exampleInputPassword1"
-        placeholder="Password"
-        name="password"
-      />
-    </div>
-    <div class="p-3" style="display: grid">
-      <button type="submit" class="btn btn-primary">Login</button>
-    </div>
-  </form>
-  <p class="mt-3 text-center">
-    Don't have an account? <a href="/musicbeats/signup">SignUp</a>
-</p>
+
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card shadow-lg p-4" style="width: 400px; border-radius: 20px;">
+    <h3 class="text-center mb-4">Login to <span style="color:#63E6BE;">Soundory</span></h3>
+
+    <form method="POST" action="/musicbeats/login/">
+      {% csrf_token %}
+      <div class="mb-3">
+        <label for="username" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+      </div>
+
+      <div class="mb-3">
+        <label for="password" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100">Login</button>
+    </form>
+
+    <p class="mt-3 text-center">
+      Don’t have an account?
+      <a href="/musicbeats/signup" class="text-decoration-none">Sign up</a>
+    </p>
+  </div>
 </div>
+
 {% endblock %}
