--- a/musicbeats/templates/musicbeats/songs.html
+++ b/musicbeats/templates/musicbeats/songs.html
@@ -10,7 +10,8 @@
   From trending tracks to hidden gems – stream everything in one place. 🔁
 </p>
 </div>
-<div class="container">
+
+{% comment %} <div class="container">
   <div class="row">
     {% for i in song reversed %}
     <div class="col-md-6 d-flex justify-content-center">
@@ -41,7 +42,42 @@
     </div>
     {% endfor %}
   </div>
+</div> {% endcomment %}
+
+
+<div class="container mt-4">
+  <div class="row">
+    {% for i in song reversed %}
+    <div class="col-md-6 d-flex justify-content-center">
+      <div class="card shadow-lg mb-4" style="max-width: 540px; border-radius: 15px; overflow: hidden;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="/media/{{ i.image }}" class="img-fluid h-100" style="object-fit: cover;" alt="{{ i.name }}">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title text-success fw-semibold">{{ i.name }}</h5>
+              <p class="card-text mb-1"><strong>Tags:</strong> {{ i.tags }}</p>
+              <p class="card-text mb-3"><strong>Movie:</strong> {{ i.movie }}</p>
+
+              {% if user.is_authenticated %}
+              <form action="/musicbeats/history" method="POST">
+                {% csrf_token %}
+                <input type="hidden" name="music_id" value="{{ i.song_id }}">
+                <button type="submit" class="btn btn-outline-danger btn-sm">🎵 Listen Song</button>
+              </form>
+              {% else %}
+              <a href="/musicbeats/songs/{{ i.song_id }}" class="btn btn-outline-danger btn-sm">🎵 Listen Song</a>
+              {% endif %}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
 </div>
+
 {% endblock %}
 
 
