--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     {% load static %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-3">
+    <nav class="navbar navbar-expand-lg navbar-dark  px-3 " style=" background: linear-gradient(to right, #2c3e50, #34495e);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);">
       <a class="navbar-brand d-flex align-items-center" href="/" style="color: #63E6BE;">
         <i class="fa-solid fa-music fa-lg mr-2" style="color: #63E6BE;"></i> Soundory
       </a>
@@ -39,7 +40,7 @@
             <a class="nav-link" href="/musicbeats/podcast/">Podcasts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/premium/">Explore Premium</a>
+            <a class="nav-link" href="/musicbeats/premium/">Premium</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/musicbeats/support/">Support</a>
