--- a/musicbeats/templates/musicbeats/liked.html
+++ b/musicbeats/templates/musicbeats/liked.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 {% load static %} 
-<h1 style="color: rgb(158, 60, 60); text-align: center;">Like Songs</h1>
+<h1 style="color: rgb(158, 60, 60); text-align: center;">Liked Songs</h1>
 
 {% if song|length < 1 %}
         <h3 style="text-align: center; padding-top: 5%;">You have no Songs in your Like Songs</h3>
