--- a/musicbeats/templates/musicbeats/login.html
+++ b/musicbeats/templates/musicbeats/login.html
@@ -8,12 +8,12 @@
     <form method="POST" action="/musicbeats/login/">
       {% csrf_token %}
       <div class="mb-3">
-        <label for="username" class="form-label">Username</label>
+        <label for="username" class="form-label">👤 Username</label>
         <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
       </div>
 
       <div class="mb-3">
-        <label for="password" class="form-label">Password</label>
+        <label for="password" class="form-label">🔒 Password</label>
         <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" required>
       </div>
 
