--- a/musicbeats/templates/musicbeats/premium.html
+++ b/musicbeats/templates/musicbeats/premium.html
@@ -4,7 +4,7 @@
 {% block body %}
 {% load static %} 
 <div class="container mt-5 text-center">
-    <h1 class="mb-4">🎧 Unlock Soundory Premium</h1>
+    <h1 class="mb-4">🎧 Unlock <span style="color:#63E6BE;">Soundory</span> <span style="color:gold;">Premium</span></h1>
     <p class="lead mb-5">Get access to ad-free music, exclusive content, and much more.</p>
 
     <div class="row justify-content-center">
