--- a/musicbeats/templates/musicbeats/watchlater.html
+++ b/musicbeats/templates/musicbeats/watchlater.html
@@ -6,7 +6,7 @@
 <h1 style="color: rgb(158, 60, 60); text-align: center;">Watch Later</h1>
 
 {% if song|length < 1 %}
-        <h3 style="text-align: center; padding-top: 5%;">You have no Video in your Watch Later</h3>
+        <h3 style="text-align: center; padding-top: 5%;">You have no Songs in your Watch Later</h3>
 {% endif %}
 
 <div class="container">
