--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -82,10 +82,10 @@
         {% else %}
         <div class="d-flex ml-auto mt-2 mt-lg-0">
           <a href="/musicbeats/login" class="mr-2">
-            <button class="btn btn-outline-danger btn-sm px-4 rounded-pill">Login</button>
+            <button class="btn btn-outline-info btn-sm px-4 rounded-pill">Login</button>
           </a>
           <a href="/musicbeats/signup">
-            <button class="btn btn-danger btn-sm px-4 rounded-pill">Signup</button>
+            <button class="btn btn-info btn-sm px-4 rounded-pill">Signup</button>
           </a>
         </div>
         {% endif %}
