--- a/musicbeats/templates/musicbeats/signup.html
+++ b/musicbeats/templates/musicbeats/signup.html
@@ -3,42 +3,11 @@
 
 {% block body %}
 
-{% comment %} <div class="container my-4 bg-light" style="width: 500px;">
-    <form method="POST" action="/musicbeats/signup/">
-        {% csrf_token %}
-        <div class="form-group p-1">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com" name="email">
-        </div>
-        <div class="form-group p-1">
-            <label for="exampleFormControlInput1">Username</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Username" name="username">
-          </div>
-          <div class="form-group p-1">
-            <label for="exampleFormControlInput1">First Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your First Name" name="firstname">
-          </div>
-          <div class="form-group p-1">
-            <label for="exampleFormControlInput1">Last Name</label>
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Last Name" name="lastname">
-          </div>
-          <div class="form-group p-1">
-            <label for="exampleFormControlInput1">Password</label>
-            <input type="password" class="form-control " id="exampleFormControlInput1" placeholder="Enter Password" name="pass1">
-          </div>
-          <div class="form-group p-1">
-            <label for="exampleFormControlInput1">Password (again)</label>
-            <input type="password" class="form-control " id="exampleFormControlInput1" placeholder="Enter Password" name="pass2">
-          </div>
-          <div style="padding-top: 2%; display:grid; padding-bottom: 2%; ">
-          <button type="submit" class="btn btn-primary">SignUp</button>
-        </div>
-      </form>
-    </div> {% endcomment %}
+
 
     <div class="container d-flex justify-content-center align-items-center vh-80 mt-3">
       <div class="card shadow-lg p-4" style="width: 420px; border-radius: 20px;">
-        <h3 class="text-center mb-3">🎧 Join Soundory</h3>
+        <h3 class="text-center mb-3">🎧 Join <span style="color:#63E6BE;">Soundory</span></h3>
         <p class="text-muted text-center mb-4">Create your free account</p>
     
         <form method="POST" action="/musicbeats/signup/">
