--- a/musicbeats/templates/musicbeats/channel.html
+++ b/musicbeats/templates/musicbeats/channel.html
@@ -1,5 +1,5 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}Login{% endblock %}
+{% block title%}Your channel{% endblock %}
 
 {% block body %}
 
