--- a/musicbeats/templates/musicbeats/podcast.html
+++ b/musicbeats/templates/musicbeats/podcast.html
@@ -1,5 +1,5 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}MusicBeats{% endblock %}
+{% block title%}Podcast{% endblock %}
 
 {% block body %}
     {% load static %}
