--- a/musicbeats/templates/musicbeats/songs.html
+++ b/musicbeats/templates/musicbeats/songs.html
@@ -1,5 +1,5 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}All Songs{% endblock %}
+{% block title%}Songs{% endblock %}
 
 {% block body %}
 <div class="container">
