--- a/musicbeats/templates/musicbeats/support.html
+++ b/musicbeats/templates/musicbeats/support.html
@@ -1,5 +1,5 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}MusicBeats{% endblock %}
+{% block title%}Support{% endblock %}
 
 {% block body %}
 {% load static %}
