--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -55,9 +55,10 @@
               Welcome <i class="fa-solid fa-circle-user fa-lg" style="color: #63E6BE;"></i> {{ request.user }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/musicbeats/profile">Profile</a>
               <a class="dropdown-item" href="/musicbeats/c/{{request.user}}">Your Channel</a>
               <a class="dropdown-item" href="/musicbeats/upload">Upload Your Song</a>
-              <a class="dropdown-item" href="/musicbeats/watchlater">Listen Later</a>
+              <a class="dropdown-item" href="/musicbeats/watchlater">Your Playlist</a>
               <a class="dropdown-item" href="/musicbeats/history">History</a>
               <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
             </div>
