--- a/musicbeats/templates/musicbeats/liked.html
+++ b/musicbeats/templates/musicbeats/liked.html
@@ -1,5 +1,5 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}MusicBeats{% endblock %}
+{% block title%}Favourite Songs{% endblock %}
 
 {% block body %}
 {% load static %} 
