--- a/musicbeats/templates/musicbeats/upload.html
+++ b/musicbeats/templates/musicbeats/upload.html
@@ -1,60 +1,48 @@
 {%extends 'musicbeats/basic.html'%}
-{% block title%}Login{% endblock %}
+{% block title%}Upload Your Song{% endblock %}
 
 {% block body %}
 
-<h2 style="text-align: center; padding-top: 2%; color: rgb(218, 16, 16);">Upload Your Music</h2>
+<h2 style="text-align: center; padding-top: 2%; color: rgb(218, 16, 16);">🎵 Upload Your Music</h2>
 
-<div class="container my-3 bg-light" style="width:500px;">
-    <form action="/musicbeats/upload" enctype="multipart/form-data" method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-          <label for="exampleInputEmail1">Your Music Name</label>
-          <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="name" placeholder="Your Song Name">
-        </div>
-        
+<div class="container my-4 bg-light p-4 shadow rounded" style="max-width: 600px;">
+  <form action="/musicbeats/upload" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
 
-        <div class="form-group">
-            <label for="exampleInputEmail1">Singer Name</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="singer" placeholder="Singer Name">
-          </div>
-
-
-          <div class="form-group">
-            <label for="exampleInputEmail1">Tags :</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="tag" placeholder="Tags (Seperate By Commas)">
-          </div>
-
-
-          <div class="form-group">
-            <label for="image">Upload Image (Associated With Your Music)</label>
-            <input type="file" class="form-control" name="image" id="image">
-          </div>
-
-          {% comment %} <div class="form-group">
-            <label for="exampleInputEmail1">Image Link: (Associated With Your Music)</label>
-            <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="image" placeholder="Link to Image">
-          </div>     {% endcomment %}
-
-
-        <div class="form-group">
-          <label for="exampleInputPassword1">Movie Name</label>
-          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Movie name in which this song is their" name="movie">
-        </div>
-
-        {% comment %} <div class="form-group">
-            <label for="exampleInputPassword1">Credit</label>
-            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Add Credit Link" name="credit">
-          </div> {% endcomment %}
-
-        <div class="form-group">
-            <label for="exampleFormControlFile1">Example file input</label>
-            <input type="file" class="form-control-file" id="exampleFormControlFile1" name="file">
-          </div>
-        
-    <div style="padding-top: 3%; padding-bottom: 3%;">
-        <button type="submit" class="btn btn-primary">Upload...</button>
+    <div class="mb-3">
+      <label class="form-label">🎼 Your Music Name</label>
+      <input type="text" class="form-control" name="name" placeholder="Enter song title">
     </div>
-      </form>
+
+    <div class="mb-3">
+      <label class="form-label">🎤 Singer Name</label>
+      <input type="text" class="form-control" name="singer" placeholder="Enter singer name">
     </div>
+
+    <div class="mb-3">
+      <label class="form-label">🏷️ Tags (separated by commas)</label>
+      <input type="text" class="form-control" name="tag" placeholder="e.g. pop, melody, chill">
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">🖼️ Cover Image</label>
+      <input type="file" class="form-control" name="image" id="image">
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">🎬 Movie/Album Name</label>
+      <input type="text" class="form-control" name="movie" placeholder="Movie or album name">
+    </div>
+
+    <div class="mb-3">
+      <label class="form-label">🎵 Upload Song File</label>
+      <input type="file" class="form-control" name="file" id="exampleFormControlFile1">
+    </div>
+
+    <div class="text-center mt-4">
+      <button type="submit" class="btn btn-info px-4">⬆ Upload</button>
+    </div>
+  </form>
+</div>
+
 {% endblock %}
