Add runtime.txt for Python 3.10

--- a/musicbeats/templates/musicbeats/basic.html
+++ b/musicbeats/templates/musicbeats/basic.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="/musicbeats/premium/">Premium</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/musicbeats/support/">Support</a>
+            <a class="nav-link" href="/musicbeats/support/">Help & Support</a>
           </li>
         </ul>
     
