--- a/musicbeats/templates/musicbeats/support.html
+++ b/musicbeats/templates/musicbeats/support.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 <div class="container mt-5">
-  <h2 class="mb-4 text-center">🛠️ Support</h2>
+  <h2 class="mb-4 text-center">Help & Support</h2>
 
   {% if messages %}
     {% for message in messages %}
